[gd_scene load_steps=24 format=2]

[ext_resource path="res://UI/dialog/dialog.tscn" type="PackedScene" id=1]
[ext_resource path="res://UI/menu/Menu.tscn" type="PackedScene" id=2]
[ext_resource path="res://UI/YellowBox.png" type="Texture" id=3]
[ext_resource path="res://UI/UI.gd" type="Script" id=4]
[ext_resource path="res://UI/YellowTheme.tres" type="Theme" id=5]
[ext_resource path="res://UI/HealthBarFill.png" type="Texture" id=6]
[ext_resource path="res://UI/HealthBarUnder.png" type="Texture" id=7]
[ext_resource path="res://UI/heart.png" type="Texture" id=8]
[ext_resource path="res://UI/ExpBarFill.png" type="Texture" id=9]
[ext_resource path="res://UI/exp.png" type="Texture" id=10]
[ext_resource path="res://UI/TransTheme.tres" type="Theme" id=11]
[ext_resource path="res://Assets/Items/money.png" type="Texture" id=12]
[ext_resource path="res://UI/quest/QuestPanel.gd" type="Script" id=13]
[ext_resource path="res://UI/Handwrittenrpg-Regular.ttf" type="DynamicFontData" id=14]
[ext_resource path="res://UI/lv.png" type="Texture" id=15]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.941176, 0.905882, 0.839216, 1 )
border_color = Color( 1, 0.247059, 0.247059, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.941176, 0.905882, 0.839216, 1 )
border_color = Color( 1, 0.337255, 0.337255, 1 )

[sub_resource type="StyleBoxFlat" id=3]
content_margin_left = 10.0
content_margin_right = 10.0
content_margin_top = 10.0
bg_color = Color( 0.984314, 0.839216, 0.690196, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 1, 0.737255, 0.564706, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=6]
content_margin_left = 10.0
content_margin_right = 10.0
content_margin_top = 10.0
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=7]
content_margin_left = 8.0
content_margin_right = 8.0
content_margin_top = 8.0
content_margin_bottom = 8.0
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="DynamicFont" id=8]
size = 24
use_filter = true
font_data = ExtResource( 14 )

[node name="UI" type="CanvasLayer"]
layer = 2
script = ExtResource( 4 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" parent="Control" instance=ExtResource( 2 )]
margin_left = -0.0162351
margin_top = -0.0162201
margin_right = -0.0162354
margin_bottom = -0.0162048
mouse_filter = 1

[node name="money" type="Sprite" parent="Control"]
position = Vector2( 47.0894, 15.6855 )
texture = ExtResource( 12 )

[node name="Heart" type="TextureRect" parent="Control"]
margin_left = 499.89
margin_top = 4.43669
margin_right = 520.89
margin_bottom = 25.4367
texture = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EXP" type="TextureRect" parent="Control"]
margin_left = 500.42
margin_top = 32.1152
margin_right = 521.42
margin_bottom = 53.1152
texture = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Health" type="TextureProgress" parent="Control"]
margin_left = 524.0
margin_top = 4.0
margin_right = 636.0
margin_bottom = 24.0
value = 100.0
texture_under = ExtResource( 7 )
texture_progress = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExpBar" type="TextureProgress" parent="Control"]
margin_left = 524.065
margin_top = 31.6449
margin_right = 636.065
margin_bottom = 51.6449
texture_under = ExtResource( 7 )
texture_progress = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Money" type="Label" parent="Control"]
margin_left = 63.0
margin_top = 5.0
margin_right = 93.0
margin_bottom = 30.0
theme = ExtResource( 11 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lv" type="Sprite" parent="Control"]
position = Vector2( 449.961, 14.0009 )
texture = ExtResource( 15 )

[node name="Label" type="Label" parent="Control/lv"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 13.6249
margin_top = -19.3153
margin_right = 39.6249
margin_bottom = 5.68467
theme = ExtResource( 11 )
text = " 1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DialogSmall" parent="." instance=ExtResource( 1 )]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -270.0
margin_top = -168.0
margin_right = 270.0
margin_bottom = 0.0
theme = ExtResource( 5 )

[node name="HBox" parent="DialogSmall" index="2"]
margin_right = 540.0
margin_bottom = 29.0

[node name="NameBox" parent="DialogSmall/HBox" index="0"]
margin_right = 64.0
margin_bottom = 29.0
custom_styles/panel = SubResource( 1 )

[node name="NinePatchRect2" type="NinePatchRect" parent="DialogSmall/HBox/NameBox" index="0"]
margin_right = 64.0
margin_bottom = 29.0
texture = ExtResource( 3 )
patch_margin_left = 5
patch_margin_top = 9
patch_margin_right = 7
patch_margin_bottom = 6
axis_stretch_horizontal = 1
axis_stretch_vertical = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Margin" parent="DialogSmall/HBox/NameBox" index="1"]
margin_right = 64.0
margin_bottom = 29.0
custom_constants/margin_right = 5
custom_constants/margin_top = 2
custom_constants/margin_left = 5
custom_constants/margin_bottom = 2

[node name="Name" parent="DialogSmall/HBox/NameBox/Margin" index="0"]
margin_left = 5.0
margin_top = 2.0
margin_right = 59.0
margin_bottom = 27.0
valign = 1

[node name="Margin" parent="DialogSmall/HBox" index="1"]
margin_left = 68.0
margin_right = 68.0
margin_bottom = 29.0

[node name="TextBox" parent="DialogSmall" index="3"]
margin_top = 33.0
margin_right = 540.0
margin_bottom = 168.0
custom_styles/panel = SubResource( 2 )

[node name="NinePatchRect" type="NinePatchRect" parent="DialogSmall/TextBox" index="0"]
margin_right = 540.0
margin_bottom = 135.0
texture = ExtResource( 3 )
patch_margin_left = 5
patch_margin_top = 9
patch_margin_right = 7
patch_margin_bottom = 6
axis_stretch_horizontal = 1
axis_stretch_vertical = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Margin" parent="DialogSmall/TextBox" index="1"]
margin_right = 540.0
margin_bottom = 135.0
custom_constants/margin_right = 15
custom_constants/margin_top = 15
custom_constants/margin_left = 15
custom_constants/margin_bottom = 15

[node name="HBox" parent="DialogSmall/TextBox/Margin" index="0"]
margin_left = 15.0
margin_top = 15.0
margin_right = 525.0
margin_bottom = 120.0

[node name="PanelContainer" parent="DialogSmall/TextBox/Margin/HBox" index="0"]
custom_styles/panel = SubResource( 3 )

[node name="VBox" parent="DialogSmall/TextBox/Margin/HBox" index="1"]
margin_right = 510.0

[node name="Text" parent="DialogSmall/TextBox/Margin/HBox/VBox" index="0"]
margin_right = 395.0
margin_bottom = 76.0

[node name="Choices" parent="DialogSmall/TextBox/Margin/HBox/VBox" index="1"]
margin_top = 80.0
margin_right = 395.0

[node name="VBox" parent="DialogSmall/TextBox/Margin/HBox/VBox/Choices" index="0"]
margin_right = 395.0
margin_bottom = 25.0

[node name="Button" parent="DialogSmall/TextBox/Margin/HBox/VBox/Choices/VBox" index="0"]
margin_right = 395.0
margin_bottom = 25.0

[node name="NextIcon" parent="DialogSmall" index="4"]
position = Vector2( 506.934, 146.371 )

[node name="Next" parent="DialogSmall/NextIcon" index="0"]
position = Vector2( 0, -0.0314167 )

[node name="Node" type="Node" parent="DialogSmall"]

[node name="DialogBlack" parent="." instance=ExtResource( 1 )]
visible = false

[node name="NameBox" parent="DialogBlack/HBox" index="0"]
custom_styles/panel = SubResource( 4 )

[node name="TextBox" parent="DialogBlack" index="3"]
custom_styles/panel = SubResource( 5 )

[node name="PanelContainer" parent="DialogBlack/TextBox/Margin/HBox" index="0"]
custom_styles/panel = SubResource( 6 )

[node name="QuestPanel" type="PanelContainer" parent="."]
visible = false
margin_left = 210.674
margin_top = 60.6629
margin_right = 408.674
margin_bottom = 298.663
mouse_filter = 1
theme = ExtResource( 11 )
custom_styles/panel = SubResource( 7 )
script = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="QuestPanel"]
margin_left = 8.0
margin_top = 8.0
margin_right = 190.0
margin_bottom = 230.0

[node name="Label" type="Label" parent="QuestPanel/VBoxContainer"]
margin_right = 182.0
margin_bottom = 25.0
text = "Quest Title"

[node name="HSeparator" type="HSeparator" parent="QuestPanel/VBoxContainer"]
margin_top = 29.0
margin_right = 182.0
margin_bottom = 33.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="QuestPanel/VBoxContainer"]
margin_top = 37.0
margin_right = 182.0
margin_bottom = 186.0
size_flags_vertical = 3
custom_fonts/normal_font = SubResource( 8 )
text = "Quest Description: Kill off all the slimes on this page."

[node name="Button" type="Button" parent="QuestPanel/VBoxContainer"]
margin_top = 190.0
margin_right = 182.0
margin_bottom = 222.0
text = "OK"

[connection signal="dialog_ended" from="DialogSmall" to="." method="_on_dialog_ended"]
[connection signal="dialog_ended" from="DialogBlack" to="." method="_on_dialog_ended"]
[connection signal="pressed" from="QuestPanel/VBoxContainer/Button" to="QuestPanel" method="_on_Button_pressed"]

[editable path="DialogSmall"]
[editable path="DialogBlack"]
